applications/elasticsearch/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-proxy-suffix
spec:
  addPrefix:
    prefix: /proxy
