applications/elasticsearch/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-proxy
spec:
  selector:
    app: elastic-proxy
  ports:
    - port: 8080
      name: http
      targetPort: 8080
