applications/elasticsearch/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-proxy-suffix
spec:
  addPrefix:
    prefix: /proxy
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
spec:
  entryPoints:
    - elasticsearch
  routes:
    - match: Host(`elasticsearch.services.sbling.net`)
      kind: Rule
      middlewares:
        - name: add-proxy-suffix
      services:
        - name: elastic-proxy
          port: 8080
          scheme: http
  tls:
    secretName: elasticsearch-services-sbling-net-prod-cert
